# building-aggregation-tool

./: Jenkinsfile  README.md  run_build.sh  scratch.md
docker/: .env  .gitignore  binbash.bat  binbash.sh  binbash_2.bat  binbash_2.sh  build.sh  docker-compose-dev.yml  docker-compose-jenkins.yml  docker-compose.yml  down.sh
docker/bldg-agg-python/: Dockerfile  bh-gdal.sh  bh-proj.sh  bh-static-proj.sh  build.bat  build_gdal.sh  build_geos.sh  build_kml.sh  build_proj.sh  custom_entrypoint.sh  install_postgis.sh  run_bldg_agg.sh  run_tests.sh  wait-for.sh
modules/BLDG_AGG/: .gitignore
modules/BLDG_AGG/docs/: bldg_agg_script_steps.html
modules/BLDG_AGG/src/: config.py  main.py  steps.py
modules/ID_SET_CMP/: .gitignore
modules/ID_SET_CMP/src/: config.py  main.py  steps.py
rust/: .gitignore  Cargo.toml  run_contour.sh
rust/bldg_agg/: Cargo.toml
rust/bldg_agg/src/: cmd_check_raster_center.rs  cmd_count_area_and_total.rs  cmd_create_centroids.rs  cmd_create_corners.rs  cmd_fill_center_building_groups.rs  cmd_filter_using_raster.rs  cmd_fix_reproject_split.rs  cmd_floodfill.rs  main.rs  raster_center_dto.rs
rust/buffer_shapes/: Cargo.toml
rust/buffer_shapes/src/: main.rs  utm_proj_cache.rs
rust/cmdline_tools/: Cargo.toml
rust/cmdline_tools/src/: cmd_burn_polygon_to_raster.rs  cmd_contour.rs  cmd_count_to_raster.rs  cmd_diff_raster.rs  cmd_fix_geom.rs  cmd_get_projected_extent.rs  cmd_group_to_multi.rs  cmd_id_set_cmp.rs  cmd_merge_vector_layers_fast.rs  cmd_ra_hf_csv.rs  cmd_raster_stats.rs  cmd_ratio_raster.rs  cmd_set_no_data.rs  cmd_set_nodata_if_rhs.rs  cmd_test_projection.rs  cmd_to_single.rs  lhs_rhs_args.rs  main.rs
rust/cmdline_tools/src/contour/: main.rs  mod.rs  simply.rs
rust/fast_intersection/: Cargo.toml
rust/fast_intersection/src/: cmd_intersect.rs  cmd_prepare.rs  main.rs
rust/gdal/: .gitignore  Cargo.toml
rust/gdal-sys/: Cargo.toml  build.rs  gen_bindings.sh  wrapper.h
rust/gdal-sys/src/: gdal_3_3.rs  lib.rs
rust/gdal/examples/: metadata.rs  read_write_ogr.rs  read_write_ogr_datetime.rs  spatial_reference.rs  write_ogr.rs
rust/gdal/src/: config.rs  errors.rs  gdal_major_object.rs  lib.rs  metadata.rs  utils.rs  version.rs
rust/gdal/src/raster/: dataset.rs  driver.rs  global_func.rs  mod.rs  rasterband.rs  tests.rs  types.rs  warp.rs
rust/gdal/src/spatial_ref/: mod.rs  srs.rs  tests.rs
rust/gdal/src/vector/: dataset.rs  driver.rs  feature.rs  field.rs  geometry.rs  global_func.rs  layer.rs  layer_definition.rs  mod.rs
rust/gdal/src/vector/ops/: mod.rs
rust/gdal/src/vector/ops/geometry/: intersection.rs  mod.rs
rust/gdal/src/vector/tests/: mod.rs
rust/geo_util/: Cargo.toml  build.rs  diesel.toml  run.bat
rust/geo_util/src/: building_main.rs  classification_model.rs  lib.rs
rust/geo_util/src/convert/: convert_geo.rs  gdal_to_geos.rs  gdal_to_rustgeo.rs  geojson_to_geos.rs  geos_to_gdal.rs  geos_to_geojson.rs  geos_to_rustgeo.rs  mod.rs  rustgeo_to_gdal.rs  rustgeo_to_geos.rs  traits.rs
rust/geo_util/src/csv/: csv_reader.rs  mod.rs
rust/geo_util/src/gdm/: constants.rs  mod.rs  paths.rs
rust/geo_util/src/gdm/database/: db_models.rs  diesel_postgis.rs  mod.rs
rust/geo_util/src/gdm/dto/: building.rs  mod.rs
rust/geo_util/src/io/: input_ogr_layers.rs  mod.rs  serialize.rs
rust/geo_util/src/pq/: mod.rs
rust/geo_util/src/raster/: algo.rs  burn_polygon.rs  combine_rasters.rs  mod.rs  raster_resample.rs  raster_stats.rs  test_util.rs
rust/geo_util/src/util/: chunk_iterator.rs  mod.rs  raster_window_iterator.rs  test_util.rs  util.rs
rust/geo_util/src/vector/: area.rs  columns.rs  fix_geom.rs  mod.rs  transform.rs
rust/geos/: Cargo.toml
rust/geos-sys/: .travis.yml  Cargo.toml  README.md  build.rs
rust/geos-sys/src/: functions.rs  lib.rs  types.rs
rust/geos/src/: enums.rs  functions.rs  geometry.old  lib.rs  prepared_geometry.rs  simple_context_handle.rs  simple_coordinate_sequence.rs  simple_geometry.rs  simple_string.rs  simple_wkb_reader.rs  simple_wkb_writer.rs
rust/union_shapes/: Cargo.toml
rust/union_shapes/src/: main.rs  rtree_index_object.rs
rust/zonal_stats/: Cargo.toml
rust/zonal_stats/src/: main.rs
src/: .gitignore
src/novelt/: common_steps.py
src/novelt/lib/: db_utils.py  file_utils.py  gdm_utils.py  gdm_utils_test.py  geo_db_utils.py  geo_db_utils_test.py  logger_utils.py  raster_utils.py  test_utils.py  thread_utils.py
src/test/: .gitignore  print_zip.py  raster_test.py  raster_utils_test.py  vector_utils_test.py
