[package]
name = "fast_intersection"
version = "0.1.0"
authors = ["root"]
edition = "2021"
license = "GPL-3.0-or-later"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
geo_util = { path = "../geo_util" }
anyhow = "1.0"
itertools = "*"
structopt = { version = "0.3" }
#format_num = "*"
#rayon = "1.4"
#ndarray = {version = "0.13", features = ["rayon"] }
#float-cmp = "0"
num-traits = "0.2.0"
num-derive = "0.2"
serde = {version="1.0", features = ["derive"]}
crossbeam = "0"
chrono = {version="0", features = ["serde"]}
#partitions = "0.2.4"
bitvec = "1"
geo-booleanop = "0.3.2"
geo-types = "0.6.1"
#geo = "0.17"
bincode = "1.3.3"

simple_logger="2.1.0"
log="0.4.14"

#
#[dependencies.geo]
#version = "0"
#features = ["serde", "use-serde"]

[dependencies.gdal]
version = "*"
path = "../gdal"
#path = "D:\\git\\gdal"
#git = "https://github.com/eric7237cire/gdal"
#branch = "experiment1"
features = ["array"]

[dependencies.rstar]
version = "0.9.2"
features = ["serde"]

[dependencies.geos]
features = ["geo", "v3_8_0"]
path = "../geos"

#[dependencies.marching-squares]
#version = "0.1.1"
#features = ["parallel"]